add build using gulp. Compiles typescript and runs mocha tests. Includes a watch task, which keeps gulp running and re-compiles and runs tests whenever a TypeScript file changes.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Compiled JS
+release
+
+# Type definitions directory
+typings
+
 # Logs
 logs
 *.log
@@ -20,8 +26,6 @@ coverage
 build/Release
 
 # Dependency directory
-# Commenting this out is preferred by some people, see
-# https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 node_modules
 
 # Users Environment Variables
