--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "gulp-mocha": "^2.0.0",
     "gulp-typescript": "^2.4.2",
     "merge2": "^0.3.1",
-    "typescript": "^1.4.1"
+    "typescript": "^1.4.1",
+    "which": "^1.0.9"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
