--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "test": "test"
   },
   "dependencies": {
+    "source-map-support": "^0.2.9",
     "typescript": "^1.4.1"
   },
   "devDependencies": {
     "chai": "^2.1.1",
     "gulp": "^3.8.11",
     "gulp-mocha": "^2.0.0",
+    "gulp-sourcemaps": "^1.5.0",
     "gulp-typescript": "^2.4.2",
     "merge2": "^0.3.1",
     "typescript": "^1.4.1",
