--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "chai": "^2.1.1",
     "gulp": "^3.8.11",
+    "gulp-clang-format": "^1.0.0",
     "gulp-mocha": "^2.0.0",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-typescript": "ivogabe/gulp-typescript",
