--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-mocha": "^2.0.0",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-typescript": "ivogabe/gulp-typescript",
+    "gulp-util": "^3.0.4",
     "merge2": "^0.3.1",
     "typescript": "Microsoft/TypeScript",
     "which": "^1.0.9"
