--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "source-map-support": "^0.2.9",
-    "typescript": "Microsoft/TypeScript"
+    "typescript": "Microsoft/TypeScript#2bcf84c73bfa21a69c7a0090d2f2f9be482dbe70"
   },
   "devDependencies": {
     "chai": "^2.1.1",
@@ -18,7 +18,6 @@
     "gulp-sourcemaps": "^1.5.0",
     "gulp-typescript": "ivogabe/gulp-typescript",
     "merge2": "^0.3.1",
-    "typescript": "Microsoft/TypeScript#be4ff97a6b31f8c0737530d7d508c29aa3da2eb0",
     "which": "^1.0.9"
   },
   "scripts": {
