Switch language to dart, so that a DartVM is available.
Some version of NodeJS is available in every package, so we can just rely on
npm & node being available in the path, and rather depend on Dart. This should
probably be faster than downloading and installing Dart on every test run.

Also remove the other node versions, they don't add value for the moment.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
-language: node_js
+language: dart # NodeJS is available everywhere
 node_js:
-  - "0.12"
   - "stable"
-  - "iojs"
+before_script:
+    - npm install
+script:
+    - npm test
