--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "chai": "^2.1.1",
+    "fs-extra": "^0.16.5",
     "gulp": "^3.8.11",
     "gulp-clang-format": "^1.0.0",
     "gulp-mocha": "^2.0.0",
