fix(build): depend on the Microsoft repo

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts2dart",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "Transpile TypeScript code to Dart",
   "main": "release/js/main.js",
   "directories": {
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "source-map-support": "^0.2.9",
-    "typescript": "mprobst/TypeScript#decorators_min"
+    "typescript": "Microsoft/TypeScript#nonTSExtensions"
   },
   "devDependencies": {
     "chai": "^2.1.1",
