Refactor the fs layout before refactoring main.ts.
Move sources into a "lib" subdir (just main.ts for now).
Rename release -> build.
Produce source in build/src so that references from tests work.
Don't use a tmpdir for e2e tests.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ts2dart",
   "version": "0.1.6",
   "description": "Transpile TypeScript code to Dart",
-  "main": "release/js/main.js",
+  "main": "build/lib/main.js",
   "directories": {
     "test": "test"
   },
