--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "gulp-util": "^3.0.4",
     "merge2": "^0.3.1",
     "temp": "^0.8.1",
+    "tsd": "^0.5.7",
     "which": "^1.0.9"
   },
   "scripts": {
-    "preinstall": "npm install tsd && tsd update",
+    "preinstall": "tsd update",
     "prepublish": "gulp compile",
     "test": "gulp test"
   },
