fix(build): use correct tsd command
update grabs typings from head, ignoring the commit shas in tsd.json.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "which": "^1.0.9"
   },
   "scripts": {
-    "preinstall": "tsd update",
+    "preinstall": "tsd reinstall",
     "prepublish": "gulp compile",
     "test": "gulp test"
   },
