--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "fs-extra": "^0.18.0",
     "source-map": "^0.4.2",
     "source-map-support": "^0.2.9",
-    "typescript": "Microsoft/TypeScript#cebe42b81fbeeaf68c8e228dda5e602ab94e151b"
+    "typescript": "git://github.com/mhegazy/TypeScript.git#v1.5-beta"
   },
   "devDependencies": {
     "chai": "^2.1.1",
