--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "gulp-clang-format": "^1.0.0",
     "gulp-mocha": "^2.0.0",
     "gulp-sourcemaps": "^1.5.0",
-    "gulp-typescript": "ivogabe/gulp-typescript",
+    "gulp-typescript": "^2.6.0",
     "gulp-util": "^3.0.4",
     "merge2": "^0.3.1",
     "temp": "^0.8.1",
