--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   "dependencies": {
     "fs-extra": "^0.18.0",
     "source-map": "^0.4.2",
-    "source-map-support": "git://github.com/mprobst/node-source-map-support",
-    "typescript": "git://github.com/mhegazy/TypeScript.git#v1.5-beta"
+    "source-map-support": "git://github.com/mprobst/node-source-map-support"
+  },
+  "peerDependencies": {
+    "typescript": "^1.5.0-beta"
   },
   "devDependencies": {
     "chai": "^2.1.1",
-    "fs-extra": "^0.16.5",
     "gulp": "^3.8.11",
     "gulp-clang-format": "^1.0.0",
     "gulp-mocha": "^2.0.0",
