--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "fs-extra": "^0.18.0",
     "source-map": "^0.4.2",
     "source-map-support": "git://github.com/mprobst/node-source-map-support",
-    "typescript": "git://github.com/alexeagle/TypeScript#error_is_class"
+    "typescript": "git://github.com/alexeagle/TypeScript#cddc1867c44b6bed9095dc30f0b0f552cbc003a9"
   },
   "devDependencies": {
     "chai": "^2.1.1",
