fix(build): revert the peerDependency and use released TypeScript
The version of typescript used at compile time needs to match runtime, due to
const enum SyntaxKind.
We don't want to release ts2dart every time angular wants to pick up a bugfix
from upstream TypeScript, so we need to solve this the right way via
npm dependency management and shrinkwrap.

This change simply uses the released typescript beta since that works for
ts2dart's tests.

Fixes #148.

Squashed commits follow:

Revert "Upgrade to newest TypeScript at head"

This reverts commit 1f0fd1e3ed0af6ca16248ffab6aa93b7a0b3f653.

Revert "peerDependency seems to interact poorly with shrinkwrap"

This reverts commit 5a575f45be814092ebe2b8b2ddf6ec46fa27337f.

Revert "fix(build): typescript now a peerDependency"

This reverts commit c9568754e0b342a2441d81493f47eb350f16b731.

--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "fs-extra": "^0.18.0",
     "source-map": "^0.4.2",
     "source-map-support": "git://github.com/mprobst/node-source-map-support",
-    "typescript": "git://github.com/alexeagle/TypeScript#cddc1867c44b6bed9095dc30f0b0f552cbc003a9"
+    "typescript": "1.5.0-beta"
   },
   "devDependencies": {
     "chai": "^2.1.1",
+    "fs-extra": "^0.16.5",
     "gulp": "^3.8.11",
     "gulp-clang-format": "^1.0.0",
     "gulp-mocha": "^2.0.0",
