--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "fs-extra": "^0.18.0",
+    "minimist": "^1.1.1",
     "source-map": "^0.4.2",
     "source-map-support": "^0.3.1",
     "typescript": "alexeagle/TypeScript#error_is_class"
