--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "fs-extra": "^0.18.0",
     "source-map": "^0.4.2",
-    "source-map-support": "git://github.com/mprobst/node-source-map-support",
+    "source-map-support": "git://github.com/evanw/node-source-map-support#9b28b7896934a2836f58b536a98081b47c755c20",
     "tsd": "^0.5.7",
     "typescript": "1.5.0-beta"
   },
