--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
   },
   "dependencies": {
     "fs-extra": "^0.18.0",
-    "gulp-typescript": "^2.7.6",
     "source-map": "^0.4.2",
     "source-map-support": "^0.3.1",
     "tsd": "^0.6.0",
-    "typescript": "1.5.0-beta"
+    "typescript": "alexeagle/TypeScript#error_is_class"
   },
   "devDependencies": {
     "chai": "^2.1.1",
