fix: use npm update to make sure packages get updated.
npm install seems to ignore already installed packages, regardless of whether
they do or do not meet version requirements. Update should update all packages.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: dart # NodeJS is available everywhere
 node_js:
   - "stable"
 before_script:
-    - npm install
+    - npm update
 script:
     - npm test
 cache:
