feat: pass clang-format to the gulp plugin.
This allows requiring a specific version of clang-format for ts2dart,
which should make for more reproducible builds.

--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   },
   "devDependencies": {
     "chai": "^2.1.1",
+    "clang-format": "^1.0.25",
     "gulp": "^3.8.11",
-    "gulp-clang-format": "^1.0.19",
+    "gulp-clang-format": "^1.0.21",
     "gulp-mocha": "^2.0.0",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-typescript": "^2.7.6",
