--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "minimist": "^1.1.1",
     "source-map": "^0.4.2",
     "source-map-support": "^0.3.1",
-    "typescript": "Microsoft/TypeScript#release-1.5"
+    "typescript": "1.6.2"
   },
   "devDependencies": {
     "chai": "^2.1.1",
