--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,6 @@
   "compilerOptions": {
     "module": "commonjs",
     "noImplicitAny": true,
-    "noEmit": true,
-  },
+    "noEmit": true
+  }
 }
