--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
-  "compilerOptions": {
+  "compilerOptions": {   
     "module": "commonjs",
     "noImplicitAny": true,
-    "noEmit": true,
-  },
+    "noEmit": true
+  }
 }
