chore: clean up gulpfile, use tsconfig.json.
- Always use tsconfig.json as the one authoritative source for
  compilation.
- Specify noEmit so that IDEs don't generate files on disk.
- Override tsconfig.json options as needed:
  - noEmit: false to emit files
  - declaration: true to generate .d.ts files
  - typescript to specify the TS version used

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,15 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "moduleResolution": "node",
+    "noEmit": true,
+    "noEmitOnError": true,
     "noImplicitAny": true,
-    "noEmit": true
-  }
+    "noImplicitAny": true
+  },
+  "exclude": [
+    "node_modules",
+    "build",
+    "test/e2e"
+  ]
 }
