chore: upgrade clang-format to 1.0.37.
Summary:
chore: adjust formatting for clang-format 1.0.37.

feat: install tslint.json.

Eating our own dog food, we should make sure tslint works well for us.
The given configuration is a straw man, but overall seems to match what
we've been doing so far.

chore: fix lint.

Reviewers: alexeagle

Reviewed By: alexeagle

Subscribers: typescript-eng

Differential Revision: https://reviews.angular.io/D43

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "noEmit": true,
     "noEmitOnError": true,
     "noImplicitAny": true,
-    "noImplicitAny": true
+    "allowUnreachableCode": false
   },
   "exclude": [
     "node_modules",
