--- a/package.json
+++ b/package.json
@@ -16,18 +16,20 @@
   },
   "devDependencies": {
     "chai": "^2.1.1",
-    "clang-format": "^1.0.34",
+    "clang-format": "^1.0.37",
     "fs-extra": "^0.18.0",
     "gulp": "^3.8.11",
     "gulp-clang-format": "^1.0.21",
     "gulp-mocha": "^2.0.0",
     "gulp-sourcemaps": "^1.5.0",
+    "gulp-tslint": "^4.3.4",
     "gulp-typescript": "^2.7.6",
     "gulp-util": "^3.0.4",
     "merge2": "^0.3.1",
     "npm-release": "^1.0.0",
     "temp": "^0.8.1",
     "tsd": "^0.6.0",
+    "tslint": "^3.7.1",
     "which": "^1.0.9"
   },
   "scripts": {
