Automatically run unit tests on "arc diff".
Summary: This is not quite Travis, but should make operations a bit safer.

Reviewers: alexeagle

Reviewed By: alexeagle

Subscribers: typescript-eng

Differential Revision: https://reviews.angular.io/D52

--- a/.arcconfig
+++ b/.arcconfig
@@ -1,3 +1,8 @@
 {
-  "base": "git:origin/v0.7"
+  "base": "git:origin/v0.7",
+  "phabricator.uri" : "https://reviews.angular.io/",
+  "load": [
+    ".arc/npm-test"
+  ],
+  "unit.engine": "NpmUnitTestEngine"
 }
